<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/dialog_background">

    <TextView
        android:id="@+id/tv_dialog_task_title"
        style="@style/Title.LoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/dialog_task"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_task_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        android:hint="@string/task_name"
        android:textColorHint="@color/white"
        android:background="#232325"
        app:boxStrokeColor="#D94C4C"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_task_title">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_task_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="36dp"
        android:hint="@string/task_description"
        android:textColorHint="@color/white"
        app:boxBackgroundMode="outline"
        android:background="#232325"
        app:boxStrokeColor="#D94C4C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_task_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_date_icon"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_baseline_date_range_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_task_description"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_set_a_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/set_a_date"
        android:textColor="#D94C4C"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_date_icon"
        app:layout_constraintStart_toEndOf="@id/iv_date_icon"
        app:layout_constraintTop_toTopOf="@id/iv_date_icon" />

    <TextView
        android:id="@+id/tv_add_a_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/add_a_photo"
        android:textColor="#D94C4C"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/iv_date_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="30dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_submit_task"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_add_a_photo"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toTopOf="@id/tv_add_a_photo"
        tools:ignore="KeyboardInaccessibleWidget">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_button_submit"
            style="@style/Title.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/submit" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>