<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.signup.SignUpActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/civ_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="#403D3D"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="KeyboardInaccessibleWidget">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_signup"
        style="@style/Title.LoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup_description"
        style="@style/Subtitle.LoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce_yourself"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/background_color"
        app:layout_constraintBottom_toTopOf="@id/civ_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_description"
        app:layout_constraintVertical_bias="0.25">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/background_color"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_confirm_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/white"
        app:boxBackgroundColor="@color/background_color"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tf_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_agreement"
        style="@style/Content.Agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/i_agree_the"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/tf_confirm_password"
        app:layout_constraintTop_toBottomOf="@id/tf_confirm_password" />

    <TextView
        android:id="@+id/tv_terms_of_use"
        style="@style/Content.Agreement"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="@string/terms_of_use"
        android:textColor="#D94C4C"
        app:layout_constraintBottom_toBottomOf="@id/cb_agreement"
        app:layout_constraintStart_toEndOf="@id/cb_agreement"
        app:layout_constraintTop_toTopOf="@id/cb_agreement" />

    <androidx.cardview.widget.CardView
        android:id="@+id/civ_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="40dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="12dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tf_confirm_password"
        app:layout_constraintStart_toStartOf="@id/tf_confirm_password"
        tools:ignore="KeyboardInaccessibleWidget">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/Title.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/sign_up" />
    </androidx.cardview.widget.CardView>

    <include
        android:id="@+id/inc_loading"
        layout="@layout/layout_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>